# abbotsbury

./: .gitignore  README.md  abbotsbury.cabal  cabal.project  cabal.project.freeze  hie.yaml
.github/workflows/: build.yml  homebrew.yml  release.yml
app/: Commands.hs  Main.hs  Options.hs  Path.hs  Reference.hs  Style.hs
app/Commands/: Add.hs  Addpdf.hs  Cite.hs  Delete.hs  Deletepdf.hs  Edit.hs  Fetch.hs  Help.hs  List.hs  New.hs  Open.hs  Search.hs  Shared.hs  Sort.hs
app/Internal/: Copy.hs  MInputT.hs  Monad.hs  Path.hs  PrettyRef.hs  Style.hs  Types.hs
data/: abbot.yaml  peep.yaml
data/backups/: data.210121_005648
lib/: Abbotsbury.hs
lib/Abbotsbury/: Reference.hs
src/: Abbotsbury.hs  Main.hs
src/Abbot/: Cite.hs  Commands.hs  Crossref.hs  LatexEscapes.hs  Monad.hs  Parse.hs  Path.hs  Reference.hs  Style.hs  Work.hs
src/Abbot/Cite/: Author.hs  Format.hs  Formats.hs  Internal.hs  JInfo.hs  Part.hs  Rules.hs
src/Abbot/Cite/Formats/: HTML.hs  Internal.hs  Markdown.hs  Restructured.hs  Text.hs
src/Abbot/Cite/Helpers/: Author.hs  JInfo.hs
src/Abbot/Cite/Styles/: ACS.hs
src/Abbot/Commands/: Cite.hs  List.hs  Open.hs  Shared.hs  Sort.hs
src/Abbot/Format/: Author.hs
src/Abbotsbury/: Cite.hs  Crossref.hs  LatexEscapes.hs  Work.hs
src/Abbotsbury/Cite/: Internal.hs
src/Abbotsbury/Cite/Formats/: HTML.hs  Internal.hs  Markdown.hs  Restructured.hs  Text.hs
src/Abbotsbury/Cite/Helpers/: Author.hs  Person.hs
src/Abbotsbury/Cite/Styles/: ACS.hs  Acs.hs  AcsShort.hs  Biblatex.hs
src/Abbotsbury/Crossref/: Internal.hs
tests/: Cite.hs  Crossref.hs  Main.hs  README.md  Reference.hs  TestWorks.hs
tests/Cite/: Author.hs
tests/Cite/Helpers/: Author.hs  Person.hs
tests/Format/: Author.hs
tests/test-data/: science_oct.json  test1.json  test2.json  test3.json  test5.json  test6.json  test7.json
