cabal-version:       2.4

name:                abbotsbury
version:             0.1.0.0
synopsis:            Minimalistic command-line reference manager.
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE.txt
author:              Jonathan Yong
maintainer:          yongrenjie@gmail.com
-- copyright:
-- category:
extra-source-files:  README.md, tests/test-data/*


common abbot-deps
  build-depends:
    , base ^>=4.14.1.0
    , containers
    , text
    , microlens-platform
    , aeson , bytestring
    , req , modern-uri
    , raw-strings-qq
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
    LambdaCase
    GeneralisedNewtypeDeriving
    InstanceSigs
    FlexibleInstances
    ScopedTypeVariables
    RecordWildCards


library
  import:
    abbot-deps
  hs-source-dirs:
    src
  exposed-modules:
    Abbot.Cite
    Abbot.Cite.Helpers.Author
    Abbot.Crossref
    Abbot.LatexEscapes
    Abbot.Work
  other-modules:
    Abbot.Cite.Formats
    Abbot.Cite.Internal
  ghc-options:
    -Wall -j4 +RTS -A128m -n2m -RTS


executable abbot
  import:
    abbot-deps
  hs-source-dirs:
    app
  main-is:
    Main.hs
  other-modules:
    Commands
    Commands.Cite
    Commands.List
    Commands.Open
    Commands.Shared
    Commands.Sort
    Path
    Reference
    Style
  build-depends:
    base ^>=4.14.1.0
    , abbotsbury
    , haskeline , ansi-terminal , colour , terminal-size , optparse-applicative
    , megaparsec
    , directory , filepath >=1.3.0.0 , process , time
    , exceptions , transformers , mtl
    , yaml
  ghc-options:
    -threaded


test-suite tests
  import:
    abbot-deps
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Main.hs
  other-modules:
    Crossref
    Cite.Helpers.Author
  build-depends:
    base ^>=4.14.1.0
    , abbotsbury
    , tasty
    , tasty-hunit

-- vim:ts=2 sw=2
