cabal-version:       2.4

name:                abbotsbury
version:             0.1.0.7
synopsis:            Minimalistic reference management, primarily for chemistry, but works with all articles on Crossref.
-- description:
bug-reports:         https://github.com/yongrenjie/abbotsbury/issues
license:             MIT
license-file:        LICENSE.txt
author:              Jonathan Yong
maintainer:          yongrenjie@gmail.com
-- copyright:
-- category:
extra-source-files:  README.md, tests/test-data/*.json


common abbot-deps
  build-depends:
    , base ^>=4.14.1.0
    , containers
    , text , unicode-transforms
    , microlens
    , aeson , bytestring
    , req , modern-uri , http-client
    , raw-strings-qq
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
    LambdaCase
    GeneralisedNewtypeDeriving
    InstanceSigs
    FlexibleInstances
    ScopedTypeVariables
    RecordWildCards


library
  import:
    abbot-deps
  hs-source-dirs:
    src
  exposed-modules:
    Abbotsbury
    Abbotsbury.Cite
    Abbotsbury.Cite.Internal
    Abbotsbury.Cite.Helpers.Author
    Abbotsbury.Crossref
    Abbotsbury.LatexEscapes
    Abbotsbury.Work
  other-modules:
    Abbotsbury.Cite.Styles.ACS
    Abbotsbury.Cite.Styles.Biblatex
    Abbotsbury.Cite.Formats.Internal
    Abbotsbury.Cite.Formats.Text
    Abbotsbury.Cite.Formats.Markdown
    Abbotsbury.Cite.Formats.Restructured
    Abbotsbury.Cite.Formats.HTML
  ghc-options:
    -Wall -j4 +RTS -A128m -n2m -RTS


executable abbot
  import:
    abbot-deps
  hs-source-dirs:
    app
  main-is:
    Main.hs
  other-modules:
    Commands
    Commands.Cite
    Commands.List
    Commands.Open
    Commands.Shared
    Commands.Sort
    Options
    Path
    Reference
    Style
  build-depends:
    base ^>=4.14.1.0
    , abbotsbury
    , haskeline , ansi-terminal , colour , terminal-size
    , optparse-applicative , ansi-wl-pprint
    , megaparsec
    , microlens-platform
    , directory , filepath >=1.3.0.0 , process , time
    , exceptions , transformers , mtl
    , yaml
  ghc-options:
    -threaded


test-suite tests
  import:
    abbot-deps
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Main.hs
  other-modules:
    Cite
    Cite.Helpers.Author
    Crossref
    TestWorks
  build-depends:
    base ^>=4.14.1.0
    , abbotsbury
    , tasty
    , tasty-hunit
    , directory , filepath >=1.3.0.0

-- vim:ts=2 sw=2
