cabal-version:       2.4

name:                abbotsbury
version:             0.6.0.0
synopsis:            Minimalistic reference management
description:         `abbotsbury` is a small package designed to fetch data
                     from Crossref and generate citations from them in a
                     variety of (internally coded) citation styles. It is
                     primarily designed to work with chemistry data, although
                     in theory should work with anything off Crossref.
                     `abbotsbury` also provides a command-line tool, `abbot`,
                     which essentially acts as a reference manager. It does so
                     by maintaining a collection of PDFs.
                     Note that `abbotsbury` does /not/ parse Crossref data in
                     its entirety: it only retains as much information as it
                     needs, and throws the rest away. It currently also only
                     works with journal articles (i.e. no books, conference
                     proceedings, etc.). Lastly, it does not parse CSL files.
                     All in all, it is a specialised solution to a specialised
                     need.
bug-reports:         https://github.com/yongrenjie/abbotsbury/issues
license:             MIT
license-file:        LICENSE.txt
author:              Jonathan Yong
maintainer:          yongrenjie@gmail.com
-- copyright:
-- category:
extra-source-files:  README.md, tests/test-data/*.json


common abbot-deps
  build-depends:
    base ^>=4.14.1.0 || ^>=4.15.0.0
    , containers
    , text , unicode-transforms , unidecode , vty
    , aeson , bytestring
    , http-client , http-client-tls , network-uri
    , raw-strings-qq
    , microlens , microlens-th
    , async
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
    LambdaCase
    GeneralisedNewtypeDeriving
    InstanceSigs
    FlexibleInstances
    ScopedTypeVariables
    RecordWildCards
    DuplicateRecordFields


library
  import:
    abbot-deps
  hs-source-dirs:
    src
  exposed-modules:
    Abbotsbury
    Abbotsbury.Cite
    Abbotsbury.Cite.Internal
    Abbotsbury.Cite.Helpers.Person
    Abbotsbury.Crossref
    Abbotsbury.Crossref.Internal
    Abbotsbury.LatexEscapes
    Abbotsbury.Work
  other-modules:
    Abbotsbury.Cite.Styles.Acs
    Abbotsbury.Cite.Styles.Biblatex
    Abbotsbury.Cite.Formats.Internal
    Abbotsbury.Cite.Formats.Text
    Abbotsbury.Cite.Formats.Markdown
    Abbotsbury.Cite.Formats.Restructured
    Abbotsbury.Cite.Formats.HTML
  ghc-options:
    -Wall -j4 +RTS -A128m -n2m -RTS


executable abbot
  import:
    abbot-deps
  hs-source-dirs:
    app
  main-is:
    Main.hs
  other-modules:
    Commands
    Commands.Add
    Commands.Addpdf
    Commands.Cite
    Commands.Delete
    Commands.Deletepdf
    Commands.Edit
    Commands.Fetch
    Commands.Help
    Commands.List
    Commands.New
    Commands.Open
    Commands.Search
    Commands.Shared
    Commands.Sort
    Internal.Copy
    Internal.MInputT
    Internal.Monad
    Internal.Path
    Internal.PrettyRef
    Internal.Style
    Options
    Reference
    Paths_abbotsbury
  build-depends:
    base ^>=4.14.1.0 || ^>=4.15.0.0
    , abbotsbury
    , haskeline , ansi-terminal , colour , terminal-size
    , optparse-applicative , ansi-wl-pprint
    , megaparsec , replace-megaparsec
    , microlens-platform
    , directory , filepath >=1.3.0.0 , process , time , temporary
    , exceptions , transformers , mtl
    , yaml
    , utf8-string
    , http-types , case-insensitive
  ghc-options:
    -threaded


test-suite tests
  import:
    abbot-deps
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Main.hs
  other-modules:
    Cite
    Cite.Helpers.Person
    Crossref
    TestWorks
  build-depends:
    base ^>=4.14.1.0 || ^>=4.15.0.0
    , abbotsbury
    , tasty
    , tasty-hunit
    , directory , filepath >=1.3.0.0

-- vim:ts=2 sw=2
